<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Handterminator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_route_list">Ruter</string>
    <string name="title_activity_user_profile">Profil</string>
    <string name="title_activity_delivery">Levering</string>
    <string name="action_no_signature">Levering uten signatur</string>
    <string name="action_with_signature">Levering med signatur</string>
    <string name="title_activity_nav_drawer">Rute 1</string>
    <string name="title_activity_scanning">Innskanning</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_closed">Drawer is closed.</string>
    <string name="exit_card">Lukk vindu</string>
    <string name="remove_package">Fjern pakke</string>
    <string name="remove_signature">Fjern signatur</string>
    <string name="action_phone">Telefon</string>
    <string name="action_sms">sms</string>
    <string name="action_exception">Avvik</string>
    <string name="action_add_package">Legg til pakke</string>
    <string name="receiver">Mottaker</string>
    <string name="placeholder">N/A</string>
    <string name="title_activity_test">Test</string>
    <string name="manual_kolli_input">Skriv inn kolli</string>
    <string name="scan_all_kolli">Scann alle</string>"
    <string name="continue_">Fortsett</string>
    <string name="ok">OK</string>
    <string name="finish">Fullfør</string>
    <string name="delivery_packages">Pakker</string>
    <string name="dialog_title_delivery">Fullfør levering?</string>
    <string name="dialog_title_call_receiver">Ring mottaker?</string>
    <string name="dialog_positive">Fortsett</string>
    <string name="dialog_negative">Avbryt</string>
    <string name="dialog_call_title">Ring til</string>
    <string name="call_question">Ring til</string>
    <string name="sign_here">Signer her!</string>
    <string name="route_information">Ruteinformasjon</string>
    <string name="route_number">Rutenummer</string>
    <string name="deliveries">Leveringer</string>
    <string name="pickups">Hentinger</string>
    <string name="length">Lengde</string>
    <string name="time">Tid</string>
    <string name="pick_route">Velg rute fra listen</string>
    <string name="package_number">Kollinummer</string>
    <string name="height">Høyde</string>
    <string name="width">Bredde</string>
    <string name="weight">Vekt</string>
    <string name="tore_tang">Tore Tang</string>
    <string name="taskinfo">Sendingsinformasjon</string>
    <string name="sender">Sender</string>
    <string name="transfer">Overfør</string>
    <string name="report_deviation">Rapportér</string>
    <string name="end_route">Fullfør denne ruten?</string>
    <string name="dialog_title_call_driver">Ring denne sjåføren?</string>

    //Fields (ending with colon)
    <string name="field_name">Navn:</string>
    <string name="field_receiver">Mottaker:</string>
    <string name="field_sender">Sender:</string>
    <string name="field_package_num_short">Kollinr:</string>
    <string name="field_post_number">Postnr:</string>
    <string name="field_post_city">Poststed:</string>
    <string name="field_packages">Kolli:</string>
    <string name="field_distance">Avstand:</string>
    <string name="field_delivery_id">LeveranseId:</string>
    <string name="field_number_of_packages">Antall kolli:</string>
    <string name="field_delivery">"Levering: "</string>
    <string name="field_task_id">Sendingsnummer:</string>
    <string name="field_task_type">Sendingstype:</string>
    <string name="field_type">Type:</string>
    <string name="field_address">Adresse:</string>
    <string name="field_timeslot">Tidsrom:</string>
    <string name="field_phone">Telefon:</string>
    <string name="field_route_number">Rutenummer:</string>
    <string name="field_deliveries">Leveringer:</string>
    <string name="field_pickups">Hentinger:</string>
    <string name="field_length">Lengde:</string>
    <string name="field_time">Tid:</string>
    <string name="field_time_frame">Tidsrom:</string>
    <string name="field_number">Nummer:</string>
    <string name="field_driven">Km kjørt:</string>
    <string name="field_salary">Estimert inntekt:</string>
    <string name="field_profile_time">Tid kjørt:</string>


    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="sms_default_text">Hei! Pakken din kommer om omtrent 20 minutter,</string>
    <string name="sms_default_second_part">Hilsen Postnord\'s sjåfør,</string>
    <string name="dialog_sms_title">Send melding til mottaker?</string>
    <string name="dialog_sms_positive">Send</string>
    <string name="dialog_phone_title">Ring mottaker?</string>
    <string name="dialog_phone_customer_positive">Ring</string>
    <string name="dialog_phone_driver">Ring</string>
    <string name="write_comment">Kommentar:</string>
    <string name="deviation_for_all">Rapportér avvik for alle leveranser</string>
    <string name="choose_driver_status">Velg sjåfør å overføre til</string>
    <string name="profile_transition">profile</string>
    <string name="emergency_transition">emergency</string>
    <string name="dialog_phone_leader">Ring</string>
    <string name="dialog_phone_leader_title">Ring kjøreleder?</string>
    <string name="placeholder_adress">Hobølveien 724, Spydberg</string>
    <string name="dialog_deviation_positive">Rapportér</string>
    <string name="delivery_confirmed">Levering er gjennomført</string>
    <string name="pause_route">Vil du pause denne ruten?</string>
    <string name="dialog_pause">Pause Rute</string>
    <string name="dialog_end_route_positive">Fullfør Rute</string>
    <string name="route_status">Status</string>
    <string name="dialog_timeslot_warning">En eller flere pakker er nå estimert til å ankomme utenfor sin tidsramme.</string>

</resources>
