<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Define tint in xml for icon -->
    <item
        android:id="@+id/action_exit_fragment"
        android:icon="@drawable/ic_delete_tinted"
        android:orderInCategory="999"
        android:title="@string/exit_card"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_phone"
        android:icon="@drawable/ic_phone_tinted"
        android:orderInCategory="105"
        android:title="@string/action_phone"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_sms_tinted"
        android:orderInCategory="200"
        android:title="@string/action_sms"
        app:showAsAction="always"></item>

</menu>