<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- VERY CRUDE DIALOG! mostly poc -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <TextView
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/call_question"/>

        <Button
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:id="@+id/call_receiver"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/receiver"/>
        <Button
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:id="@+id/call_sender"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/field_sender"/>
        <Button
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/dialog_negative"
            android:id="@+id/call_exit"/>

        </LinearLayout>

</RelativeLayout>
