<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/taskIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="8dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="11dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_delivery" />

                <TextView
                    android:id="@+id/taskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/taskIcon"
                    android:text="Mesan"
                    android:textAppearance="@style/TitleStyle" />

                <TextView
                    android:id="@+id/taskEta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="12dp"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/TitleStyle" />

                <TextView
                    android:id="@+id/taskTimeFrame"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingRight="3dp"
                    android:layout_toLeftOf="@id/taskEta"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/taskExpand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="59dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/field_receiver"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/taskRecipiant"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="68dp"
                                android:text="@string/placeholder" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"

                                android:text="@string/field_address"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/taskAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="68dp"
                                android:text="@string/placeholder" />
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/field_post_number"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/taskZip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="68dp"
                                android:text="@string/placeholder" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/field_post_city"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/taskCity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="68dp"
                                android:text="@string/placeholder" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:text="@string/field_packages"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/taskPackages"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="68dp"
                                android:text="@string/placeholder" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="bottom">


                        <ImageView
                            android:id="@+id/taskCall"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginBottom="3dp"
                            android:layout_marginRight="12dp"
                            android:background="@drawable/ripple_oval_white"
                            android:clickable="true"
                            android:onClick="callClicked"
                            android:src="@drawable/ic_action_phone_cropped"
                            android:tint="@color/primary_dark" />

                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>